package edu.hitsz.strategy;

import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.bullet.BaseBullet;
import java.util.List;

/**
 * 射击策略接口
 * 定义不同飞机的射击方式
 */
public interface ShootStrategy {
    /**
     * 执行射击操作
     * @param aircraft 执行射击的飞机
     * @return 射击产生的子弹列表
     */
    List<BaseBullet> shoot(AbstractAircraft aircraft);
}
