@startuml
' 策略模式 UML 图

' 定义射击策略接口
interface ShootStrategy {
  +shoot(AbstractAircraft aircraft): List<BaseBullet>
}

' 定义具体射击策略类
class StraightShootStrategy {
  -shootNum: int
  -power: int
  -direction: int
  +StraightShootStrategy(int shootNum, int power, int direction)
  +shoot(AbstractAircraft aircraft): List<BaseBullet>
}

class ScatterShootStrategy {
  -shootNum: int
  -power: int
  -direction: int
  +ScatterShootStrategy(int shootNum, int power, int direction)
  +shoot(AbstractAircraft aircraft): List<BaseBullet>
}

class RingShootStrategy {
  -shootNum: int
  -power: int
  +RingShootStrategy(int shootNum, int power)
  +shoot(AbstractAircraft aircraft): List<BaseBullet>
}

' 定义上下文类
class AbstractAircraft {
  -shootStrategy: ShootStrategy
  +setShootStrategy(ShootStrategy shootStrategy): void
  +shoot(): List<BaseBullet>
}

' 定义具体上下文类
class HeroAircraft {
  -shootNum: int
  -power: int
  -direction: int
  +HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
  +shoot(): List<BaseBullet>
}

class EliteEnemy {
  -shootNum: int
  -power: int
  -direction: int
  +EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
  +shoot(): List<BaseBullet>
}

class ElitePlusEnemy {
  -shootNum: int
  -power: int
  -direction: int
  +ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
  +shoot(): List<BaseBullet>
}

class EliteProEnemy {
  -shootNum: int
  -power: int
  -direction: int
  +EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
  +shoot(): List<BaseBullet>
}

class Boss {
  -shootNum: int
  -power: int
  -direction: int
  +Boss(int locationX, int locationY, int speedX, int speedY, int hp)
  +shoot(): List<BaseBullet>
}

' 定义关系
ShootStrategy <|-- StraightShootStrategy
ShootStrategy <|-- ScatterShootStrategy
ShootStrategy <|-- RingShootStrategy

AbstractAircraft --> ShootStrategy : 使用

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- EliteProEnemy
AbstractAircraft <|-- Boss

HeroAircraft --> ScatterShootStrategy : 默认使用
EliteEnemy --> StraightShootStrategy : 使用
ElitePlusEnemy --> ScatterShootStrategy : 使用
EliteProEnemy --> ScatterShootStrategy : 使用
Boss --> RingShootStrategy : 使用

' 标题
title 策略模式 - 射击策略
@enduml
